# mario-cg-gan

./: mario.sh  pyproject.toml
